# game

./: Cargo.toml  README.md
src/: app.rs  camera.rs  entity.rs  events.rs  main.rs  physics.rs  scheduler.rs
src/assets/: cube.rs  manager.rs  mod.rs  shader.wgsl
src/assets/shaders/: entity.wgsl  shader.wgsl
src/components/: enemy_ai.rs  mod.rs  player_stats.rs  transform.rs
src/ecs/: mod.rs  spawn.rs  world.rs
src/entities/: enemy.rs  input.rs  mod.rs  player.rs
src/input/: mod.rs
src/player/: mod.rs
src/renderer/: camera_uniform.rs  context.rs  mod.rs  vertex.rs
src/renderer/mesher/: face.rs  mod.rs
src/renderer/pipelines/: builder.rs  entity.rs  mod.rs  voxel.rs  world.rs
src/renderer/uniforms/: builder.rs  camera.rs  entity.rs  mod.rs
src/renderer/vertices/: chunk.rs  instance.rs  mod.rs  vertex.rs
src/systems/: ai.rs  mod.rs  physics.rs
src/world/: chunk.rs  generator.rs  mod.rs  voxel.rs
src/world/biomes/: desert.rs  mod.rs
