[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
winit = "0.30.13"
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.0"
cgmath = "0.18.0"
rand = "0.10.1"
rand_pcg = "0.10.2"
noise = "0.9.0"
rayon = "1.12.0"
